fixed the grid issue of priority-todos page and the history-todos page on tablet screen sizes made the grid-column 2 and on the desktop made the grid-column 3

--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1533,6 +1533,11 @@
       }
     }
   }
+  .xl\:grid-cols-3 {
+    @media (width >= 80rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+  }
 }
 body {
   font-family: Arial, sans-serif;
